# automating-blogging

./: .env.example  .gitignore  README.md  agents.py  app.py  get_files.py  main.py  manage_files.py  models.py  pyproject.toml  tasks.py
crew/: agents.py  main.py  tasks.py
models/: models.py
outputs/: 03-19_10:16_post_english.md  03-19_10:16_post_spanish.md  03-19_10:16_post_titles.csv  03-19_10:16_post_websearch.csv  03-19_10:16_post_writing.md  03-20_06:53_post_english.md  03-20_06:53_post_spanish.md  03-20_06:53_post_titles.csv  03-20_06:53_post_websearch.csv  03-20_06:53_post_writing.md
tools/: serper_dev_tool.py
